fix: searching on only groupId or artifactId (#52)