@@ -2,6 +2,8 @@ package it.mulders.mcs.search;
 
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
+import java.util.LinkedList;
+import java.util.List;
 
 import static it.mulders.mcs.search.Constants.DEFAULT_MAX_SEARCH_RESULTS;
 
@@ -13,12 +15,11 @@ public record CoordinateQuery (
 ) implements SearchQuery {
     @Override
     public String toSolrQuery() {
-        String query;
-        if (version == null) {
-            query = String.format("g:%s AND a:%s", groupId, artifactId);
-        } else {
-            query = String.format("g:%s AND a:%s AND v:%s", groupId, artifactId, version);
-        }
+        final List<String> parts = new LinkedList<>();
+        if (!groupId.isBlank()) parts.add("g:%s".formatted(groupId));
+        if (!artifactId.isBlank()) parts.add("a:%s".formatted(artifactId));
+        if (!version.isBlank()) parts.add("v:%s".formatted(version));
+        var query = String.join(" AND ", parts);
 
         return String.format("q=%s&core=gav&start=%d&rows=%d",
                 URLEncoder.encode(query, StandardCharsets.UTF_8), 0, searchLimit());
@@ -35,9 +36,14 @@ public record CoordinateQuery (
         }
 
         public Builder(String groupId, String artifactId, String version) {
-            this.groupId = groupId;
-            this.artifactId = artifactId;
-            this.version = version;
+            this.groupId = sanitise(groupId);
+            this.artifactId = sanitise(artifactId);
+            this.version = sanitise(version);
+        }
+
+        private String sanitise(String input) {
+            if (input == null) return "";
+            return input;
         }
 
         @Override
